@@ -55,4 +55,25 @@ use Test::DZil;
   }
 }
 
+{
+  my $tzil = Builder->from_config(
+    { dist_root => 'corpus/dist/DZT' },
+    {
+      add_files => {
+        'source/dist.ini' => simple_ini(
+          'GatherDir',
+          'MakeMaker',
+          [ Prereqs => { perl => '5.8.1' } ],
+        ),
+      },
+    },
+  );
+
+  $tzil->build;
+
+  my $content = $tzil->slurp_file('build/Makefile.PL');
+
+  like($content, qr/^use 5\.008001;$/m, "normalized the perl version needed");
+}
+
 done_testing;
