@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+          always numify the version use in "use VERSION" in Makefile.PL
+
 4.200006  2011-04-28 21:14:04 America/New_York
 
           MakeMaker-generated Makefile.PL now only has configure_requires of
